tests/cases/compiler-development/artifact/errors/diagnostic-match-runtime-owned-enum-payload-undropped.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before return" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" display="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" bytes=467
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" line=26 column=7 end_line=26 end_column=13 byte_start=353 byte_end=359 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari:26:7\n    |\n 26 |       return 1;\n    |       ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" line=25 column=10 end_line=25 end_column=15 byte_start=335 byte_end=340 message="owning binding 'token' declared here"
  Snippet label=1 text="  --> tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari:25:10\n    |\n 25 |     Some(token) => {\n    |          ^^^^^"
  Note index=0 location=none message="live owning bindings must be consumed explicitly before control leaves their scope"
  Help index=0 location=none message="drop 'token' before return or move it into the value that leaves this scope"
